--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   line_awesome_icons: ^1.0.4+2
+  flutter_rating_bar: ^3.2.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,7 +40,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
