--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   line_awesome_icons: ^1.0.4+2
   flutter_rating_bar: ^3.2.0+1
   flutter_slidable: ^0.5.7
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
