--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,13 @@ dependencies:
   line_awesome_icons: ^1.0.4+2
   flutter_rating_bar: ^3.2.0+1
   flutter_slidable: ^0.5.7
+  ant_icons: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  flutter_svg: ^0.19.2+1
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +51,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
