--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flutter_rating_bar: ^3.2.0+1
   flutter_slidable: ^0.5.7
   http: ^0.12.2
+  percent_indicator: ^2.1.9
+  stack: ^0.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
