--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ dependencies:
   http: ^0.12.2
   percent_indicator: ^2.1.9
   stack: ^0.0.1
+  syncfusion_flutter_barcodes: ^18.4.32+1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  flutter_svg: ^0.17.4
+  flutter_svg: ^0.19.2+1
 
 dev_dependencies:
   flutter_test:
