--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   percent_indicator: ^2.1.9
   stack: ^0.0.1
   syncfusion_flutter_barcodes: ^18.4.32+1
+  readmore: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
