--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_svg: ^0.19.2+1
   multi_select_flutter: ^3.1.6
+  form_validator: ^0.1.7
 
 dev_dependencies:
   flutter_test:
