--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: 0.18.0
   multi_select_flutter: ^3.1.6
   form_validator: ^0.1.7
+  barcode_widget: ^1.5.0
+  flutter_barcode_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
