--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   stack: ^0.0.1
   syncfusion_flutter_barcodes: ^18.4.32+1
   readmore: ^1.0.0
-
+  flutter_bloc: ^0.21.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +42,10 @@ dependencies:
   form_validator: ^0.1.7
   barcode_widget: ^1.5.0
   flutter_barcode_scanner: ^1.0.1
+  #google login
+  firebase_core: ^0.5.0
+  firebase_auth: ^0.18.0+1
+  google_sign_in: ^4.5.3
 
 dev_dependencies:
   flutter_test:
