--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   syncfusion_flutter_barcodes: ^18.4.32+1
   readmore: ^1.0.0
   flutter_bloc: ^0.21.0
+  signalr_core: ^1.0.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
