--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   readmore: ^1.0.0
   flutter_bloc: ^0.21.0
   signalr_core: ^1.0.8
-
+  path_provider: ^1.6.27
+  sqflite: ^1.3.0  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
