--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   line_awesome_icons: ^1.0.4+2
   flutter_rating_bar: ^3.2.0+1
+  google_fonts: ^0.2.0
   flutter_slidable: ^0.5.7
   ant_icons: ^1.0.0
   http: ^0.12.2
