--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   readmore: ^1.0.0
   jwt_decode: ^0.2.0
   flutter_bloc: ^0.21.0
+  firebase_messaging: ^6.0.9
   signalr_core: ^1.0.8
   path_provider: ^1.6.27
   floor: ^0.18.0
