--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   line_awesome_icons: ^1.0.4+2
+  barcode_scan_fix: ^1.0.2
   flutter_rating_bar: ^3.2.0+1
   google_fonts: ^0.2.0
   flutter_slidable: ^0.5.7
