--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   form_validator: ^0.1.7
   barcode_widget: ^1.5.0
   flutter_barcode_scanner: ^1.0.1
+  qr_flutter: ^3.1.0
   #google login
   firebase_core: ^0.5.0
   firebase_auth: ^0.18.0+1
