--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_messaging: ^6.0.9
   signalr_core: ^1.0.8
   path_provider: ^1.6.27
+  awesome_dialog: ^1.3.2
   floor: ^0.18.0
   simple_animations: ^2.5.0
   # The following adds the Cupertino Icons font to your application.
