--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   firebase_auth: ^0.18.0+1
   google_sign_in: ^4.5.3
 
+  shared_preferences: 0.5.12+4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
