--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,11 @@ dependencies:
   firebase_auth: ^0.18.0+1
   google_sign_in: ^4.5.3
 
+  #effect
+  soundpool: ^1.1.3
+  vibration: ^1.7.3
+  flutter_countdown_timer: ^4.0.2
+
   shared_preferences: 0.5.12+4
 
 dev_dependencies:
@@ -78,6 +83,7 @@ flutter:
   assets:
     - images/
     - icons/
+    - sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
