--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,15 @@ dependencies:
   flutter_rating_bar: ^3.2.0+1
   google_fonts: ^0.2.0
   flutter_slidable: ^0.5.7
+  curved_navigation_bar: ^0.3.7
+  flutter_icons: ^1.1.0
   ant_icons: ^1.0.0
+  flutter_screenutil: ^4.0.4+1
   http: ^0.12.2
+  page_transition: ^1.1.7+6
   percent_indicator: ^2.1.9
   stack: ^0.0.1
+  date_picker_timeline: ^1.2.1
   syncfusion_flutter_barcodes: ^18.4.32+1
   readmore: ^1.0.0
   jwt_decode: ^0.2.0
