--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,10 @@ dependencies:
   ant_icons: ^1.0.0
   flutter_screenutil: ^4.0.4+1
   http: ^0.12.2
+  convex_bottom_bar: ^2.5.0
   page_transition: ^1.1.7+6
   percent_indicator: ^2.1.9
+  line_icons: ^1.3.2
   stack: ^0.0.1
   date_picker_timeline: ^1.2.1
   syncfusion_flutter_barcodes: ^18.4.32+1
