--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   signalr_core: ^1.0.8
   path_provider: ^1.6.27
   awesome_dialog: ^1.3.2
+  marquee: 1.7.0
   floor: ^0.18.0
   simple_animations: ^2.5.0
   # The following adds the Cupertino Icons font to your application.
