--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   barcode_widget: ^1.5.0
   flutter_barcode_scanner: ^1.0.1
   qr_flutter: ^3.1.0
+  crypto: ^2.1.0
   #google login
   firebase_core: ^0.5.3
   firebase_messaging: ^7.0.3
