--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   readmore: ^1.0.0
   jwt_decode: ^0.2.0
   flutter_bloc: ^0.21.0
-  
+  intl: ^0.16.1
   signalr_core: ^1.0.8
   path_provider: ^1.6.27
   awesome_dialog: ^1.3.2
